# cargo build --release --target=x86_64-unknown-linux-musl
[package]
name = "accinfo"
version = "0.1.0"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2021"
description = "account information management system"
repository = "https://github.com/kivensoft/accinfo_rust"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
incremental = false
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "client"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
md-5 = "0.10"
aes = "0.8"
ctr = "0.9"
quick-xml = "0.28"
async-trait = "0.1"
rand = "0.8"
rust-embed = { version = "6.6", features = ["include-exclude"] }
asynclog = { version = "1.0", path = "asynclog" }
appconfig = { version = "1.0", path = "appconfig" }
ansicolor = { version = "1.0", path = "ansicolor" }
httpserver = { version = "1.0", path = "httpserver" }
jwt = { version = "1.0", path = "jwt" }
