# cargo build --release --target=x86_64-unknown-linux-musl
[package]
name = "accinfo"
version = "0.1.3"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2021"
description = "account information management system"
repository = "https://github.com/kivensoft/accinfo_rust"
build = "build.rs"

[features]
# default = ["current_thread"]
# current_thread = []
multi_thread = []

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
incremental = false
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["full"] } # 最流行的异步io库
hyper = { version = "1.2", features = ["http1", "client"] } # 最流行的底层http协议库
hyper-util = { version = "0.1", features = [ "client", "client-legacy", "http1", "tokio" ] } #hyper 扩展库
http-body-util = "0.1" # http body 扩展库
serde = { version = "1.0", features = ["derive", "rc"] } # 最流行的序列化反序列化库
serde_json = "1.0" # 最流行的json序列化反序列化库
compact_str = { version = "0.7", features = ["serde", "bytes"] } # 小字符串内嵌的字符串替代库
anyhow_ext = "0.2" # 最流行的错误处理库
log = "0.4" # 日志门面库，官方标准
parking_lot = "0.12" # 性能更好的替代标准库Mutex/RwLock的三方库
md-5 = "0.10" # 基于rust-crypto的md5算法库
aes = "0.8" # 基于rust-crypto的aes基础算法库
ctr = "0.9" # aes的各种算法实现，基于aes库
quick-xml = "0.31" # 流式xml解析库
async-trait = "0.1" # trait的异步函数声明库
rand = "0.8" # 最流行的随机函数库
rust-embed = { version = "8.3", features = ["include-exclude"] } # 将资源文件内嵌进可执行文件中的库
asynclog = { version = "1.0", features = ["tokio"], git = "https://gitee.com/kivensoft/asynclog_rs.git" } # 支持同步和异步两种方式的迷你日志实现库
appconfig = { version = "1.0", git = "https://gitee.com/kivensoft/appconfig_rs.git" } # 支持命令行参数解析和配置文件参数解析的库
ansicolor = { version = "1.0", git = "https://gitee.com/kivensoft/ansicolor_rs.git" } # 支持终端ansi颜色的库
localtime = { version = "1.0", git = "https://gitee.com/kivensoft/localtime_rs.git" } # 本地时间序列化反序列化库
httpserver = { version = "1.0", features = ["english"], path = "httpserver" } # 基于hyper实现的迷你的http服务库
