[package]
name = "httpserver"
version = "1.0.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "A simple, asynchronous log library"

[dependencies]
hyper = { version = "0.14", features = [ "runtime", "http1", "server" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
